# ir-remote

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  esp.cpp  esp.h  gui.cpp  gui.h  main.cpp  main.h  main1.cpp
ir_remote/: ir_remote.ino  web.cpp  web.h
